update to paper-api, update XMaterial, fix compile issues
god i hate this lib